--- a/options.html
+++ b/options.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <link rel="icon" href="/icons/logo.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>YouTube Summarizer Browser Extension</title>
+  <title>YouTube Summarized Browser Extension</title>
 </head>
 
 <body>
